管理者ページの作成

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="outline-box">
+ <div class="text-center font-default">
+  <div class="multi-bg">
+   <div class="weak-bg">
+    
+    <h1 class>
+    <span class="title_letter buruburu">ハツオンレンシュウＺ
+    </span>
+    </h1>
+    
+   
+    <h2 class="text-black">言語を選んでください</h2>
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
+        <%= link_to 'china', '#',class: 'btn btn-block' %>
+      </div>
+      
+         <div class="col-md-3">
+        <%= link_to 'italy', '#',class: 'btn btn-block' %>
+        
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+ 
