アップロード画面の作成

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -121,3 +121,8 @@ animation : scrollSample01 10s linear infinite;
     margin: 10px 5px 10px 5px; 
     padding: 0;
 }
+
+
+.topic-new-wrapper {
+  padding-top: 90px;
+}
