--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,28 +1,28 @@
 <div class="outline-box">
- <div class="text-center font-default">
-  <div class="multi-bg">
-   <div class="weak-bg">
+ <div class="top-hero-container font-default">
+  <div class="bg-img">
+   <div class="weaken-bg">
     
     <h1 class>
     <span class="title_letter buruburu">ハツオンレンシュウＺ
     </span>
     </h1>
     
-   
-    <h2 class="text-black">言語を選んでください</h2>
-    <div class="row">
-      <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'china', '#',class: 'btn btn-block' %>
-      </div>
+    <div class="text-center">
+     <h2 class="text-black ">言語を選んでください</h2>
+      <div class="row">
+        <div class="col-md-offset-3 col-md-3">
+        <%= link_to 'china', '#',class: 'btn' %>
+        </div>
       
          <div class="col-md-3">
-        <%= link_to 'italy', '#',class: 'btn btn-block' %>
-        
+        <%= link_to 'italy', '#',class: 'btn' %>
          </div>
         </div>
       </div>
+     </div>
     </div>
   </div>
-</div>
+ </div>
 
  
