--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,5 @@
 h1, h2 {
-  font-weight: 20;
+  font-weight: 80;
 }
 
 .text-black {
@@ -20,24 +20,25 @@ h1, h2 {
 }
 
 .top-hero-wrapper {
-  width: 800vw;
-  height: 400vh;
+  width: 400vw;
+  height: 200vh;
 }
 
 
 .top-hero-container {
-  padding-top: 100px;
+  padding-top: 0px;
   h1 {
-    font-size: 100px;
-    margin-bottom: 40px;
+    font-size: 40px;
+    margin-bottom: 80px;
   }
 
   h2 {
-    margin-bottom: 80px;
+    margin-bottom: 20px;
   }
 }
 
 .nagareru {
+
 margin : 0 auto 40px;
 width : 100%;
 font-size : 28px;
@@ -79,46 +80,40 @@ animation : scrollSample01 10s linear infinite;
 
 .title_letter {
   display        : inline-block;
-  color          : #fff; 
-  font-size      : 70pt;
-  letter-spacing : 5px; 
-  text-shadow    : 
-       8px  8px 1px #0066FF,
-      -8px  8px 1px #0066FF,
-       8px -8px 1px #0066FF,
-      -8px -8px 1px #0066FF,
-       8px  0px 1px #0066FF,
-       0px  8px 1px #0066FF,
-      -8px  0px 1px #0066FF,
-       0px -8px 1px #0066FF;        /* 文字の影 */
+  color          : #1E90FF; 
+  font-size      : 20pt;
+  font-weight    : 900;
+  letter-spacing : 2px; 
+  
 }
 
-.multi-bg {
-  width: 100%;
-  height: 700px;
+.bg-img {
+  
   background-image: url(pz.png),
   url(pnd.png);
   background-repeat: no-repeat,
   no-repeat;
-  background-position: 500px 150px,30px 5px;
-    }    
-    
-.weak-bg {
+  background-position: 480px 50px,90px 0px;
+  background-size: 30%,contain;
+}
+
+.weaken-bg {
   height: 100%;
   background: rgba(255,255,255,0.7);
 }
 
 .outline-box {
     padding: 20px 10px;
-    margin: 20px 10px 10px 20px;
+    margin: 10px 1px 20px 20px;
     font-weight: bold;
-    color: #0066FF;
+    color: #1E90FF;
     background: #FFF;
-    border: solid 10px #0066FF;
+    border: solid 10px #1E90FF;
     border-radius: 50px;
+    outline: solid 3px #0066FF;
 }
 .outline-box p {
-    margin: 5px 10px 10px 5px; 
+    margin: 1px 10px 10px 5px; 
     padding: 0;
 }
 
