--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">ファイルアップロード</h1>
-        <%= form_for @upload do |f| %>
+        <%= form_for @content do |f| %>
           <div class="form-group">
-            <%= f.label :content %>
-            <%= f.file_field :content%>
+            <%= f.label :video %>
+            <%= f.file_field :video %>
           </div>
 
           <div class="form-group">
