--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,28 +1,30 @@
 <div class="outline-box">
  <div class="top-hero-container font-default">
+  
   <div class="bg-img">
    <div class="weaken-bg">
     
     <h1 class>
-    <span class="title_letter buruburu">ハツオンレンシュウＺ
-    </span>
+     <span class="title_letter buruburu">ハツオンレンシュウＺ</span>
     </h1>
-    
-    <div class="text-center">
-     <h2 class="text-black ">言語を選んでください</h2>
-      <div class="row">
-        <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'china', '#',class: 'btn' %>
-        </div>
       
-         <div class="col-md-3">
-        <%= link_to 'italy', '#',class: 'btn' %>
+      <div class="row">
+       <div class="col-md-offset-3 col-md-3">
+        <div class="col-md-3">
+         
+         <div class="text-center">
+           <%= link_to 'Chinese', '#',class: 'btn' %>
+           <%= link_to 'Italian', '#',class: 'btn' %>
+         <h2 class="text-black ">言語を選んでください</h2>
          </div>
+        
         </div>
+       </div>
       </div>
-     </div>
-    </div>
+   
+   </div>
   </div>
  </div>
+</div>
 
  
