--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -83,7 +83,7 @@ animation : scrollSample01 10s linear infinite;
   color          : #1E90FF; 
   font-size      : 20pt;
   font-weight    : 900;
-  letter-spacing : 2px; 
+  letter-spacing : 1px; 
   
 }
 
@@ -118,6 +118,40 @@ animation : scrollSample01 10s linear infinite;
 }
 
 
-.topic-new-wrapper {
+.content-new-wrapper {
   padding-top: 90px;
+}
+
+.content-index-wrapper {
+  padding-top: 70px;
+  background-color: #fafafa;
+  .content-index-single {
+    background-color: #fff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 30px;
+    border: 1px solid #e6ecf0;
+    border-radius: 3px;
+    .content-author {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+
+    .content-text {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+
+    img {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      width: 100%;
+    }
+
+    .content-index-icon {
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+    }
+  }
 }
