--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,8 +1,9 @@
-<div class="topic-new-wrapper" >
-  <div class="container">
+<div class="outline-box">
+ <div class="top-hero-container font-default">
+  <div class="content-new-wrapper" >
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">ファイルアップロード</h1>
+        <h1 class="text-center" "title_letter">ファイルアップロード</h1>
         <%= form_for @content do |f| %>
           <div class="form-group">
             <%= f.label :video %>
@@ -14,10 +15,13 @@
             <%= f.text_area :description, class: 'form-control' %>
           </div>
 
-          <%= f.submit '投稿' class: "btn-white" %>
+          <%= f.submit '送信', class: "btn-white" %>
 
         <% end %>
+        </div>
+       </div>
       </div>
     </div>
   </div>
 </div>
+
