--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -5,29 +5,29 @@
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center" "title_letter">ファイルアップロード</h1>
         
-        <%= form_for @content do |f| %>
-          
+      
+          <%= form_with(model: @content, local: true) do |form| %>
           <div class="form-group">
-            <%= f.label :video %>
-            <%= f.file_field :video %>
-          </div>
+            <%= form.label :video %>
+            <%= form.file_field :video %>
+          </div>  
+        
    
-              <%= form_with(model: @content, local: true) do |form| %>
+             
                 <%= form.radio_button :language, :chinese %>
                 <%= form.label :language, "中国語", {value: :chinese, style: "display: inline-block;"} %>
                 <%= form.radio_button :language, :italian %>
                 <%= form.label :language, "イタリア語", {value: :italian, style: "display: inline-block;"} %>
-              <% end %>
         
          
               
            
           <div class="form-group">
-            <%= f.label :description %>
-            <%= f.text_area :description, class: 'form-control' %>
+            <%= form.label :description %>
+            <%= form.text_area :description, class: 'form-control' %>
           </div>
 
-            <%= f.submit '送信', class: "btn-white" %>
+            <%= form.submit '送信', class: "btn-white" %>
             <% end %>
           
         </div>
