--- a/app/views/contents/mydata.erb
+++ b/app/views/contents/mydata.erb
@@ -1,4 +1,3 @@
-    <div class="outline-box"> 
      <div class="container text-center">
       <div class="row justify-content-md-center">
         <%= form_with model: Content.new, local: true do |f| %>
@@ -25,29 +24,41 @@
         
           <div class="cernter-block">
             <div style="padding: 15px">
-                <div class="col-xs-6 text-center">
-                <%= form_with model: Content.new, local: true do |f| %>
-                <%= f.check_box :title_name, {}, :title1, nil %>
-                <%= f.label :title_name, "タイトル１", class: "title1" %>
-                <%= f.check_box :title_name, {}, :title2%>
-                <%= f.label :title_name, "タイトル２", class: "title2" %>
+                <div class="col-xs-5 text-center">
+                    
             
+                <%= form_with model: Content.new, local: true do |f| %>
+                <br><%= f.check_box :title_name, {}, :title1, nil %>
+                <%= f.label :title_name, "結果タイトル１", class: "title1" %></br>
+                <br><%= f.check_box :title_name, {}, :title2%>
+                <%= f.label :title_name, "結果タイトル２", class: "title2" %></br>
+                </br>
                 
                 <%= f.submit "検索", class: "btn-white" %>
                 <% end %>
                 </div>
               
           
-                <div class="col-xs-6 text-center">
-                <%= form_with model: Content.new, local: true do |f| %> 
-                <%= f.check_box :contents_name, {}, :content1, nil %>
-                <%= f.label :contents_named, "動画１", class: "content1" %>
-                <%= f.check_box :contents_name, {}, :content2%>
-                <%= f.label :contents_name, "動画２", class: "content2" %>
+                <div class="col-xs-5 text-center">
+                <%= form_with model: Content.new, local: true do |f| %>
+                <br><%= f.check_box :content_name, {}, :content1, nil %>
+                <%= f.label :content_name, "検索結果動画１", class: "content1" %></br>
+                
+                <br><%= f.check_box :content_name, {}, :content2%>
+                <%= f.label :content_name, "検索結果動画２", class: "content2" %></br>
                 
                 <%= f.submit "検索", class: "btn-white" %>
+                </ul>
                 <% end %>   
+                </div>
+                
+                <div class="col-xs-2 text-center">
+                    <%= link_to '新規登録', '#',class: 'btn' %>
+                    <%= link_to '再生', '#',class: 'btn' %>
+                    <%= link_to '公開設定', '#',class: 'btn' %>
+                    <%= link_to '非公開設定', '#',class: 'btn' %>
+                    <%= link_to '名前変更', '#',class: 'btn' %>
+                    <%= link_to '削除', '#',class: 'btn' %>
                 </div>
             </div>
           </div>
-    </div>
