--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,12 +9,12 @@
     </h1>
       
       <div class="row">
-       <div class="col-md-offset-3 col-md-3">
+       <div class="col-md-offset-3 col-md-3 col-md-3">
         <div class="col-md-3">
          
          <div class="text-center">
-           <%= link_to 'Chinese', '#',class: 'btn' %>
-           <%= link_to 'Italian', '#',class: 'btn' %>
+           <%= link_to 'Chinese', '/chinese',class: 'btn' %>
+           <%= link_to 'Italian', '/italian',class: 'btn' %>
          <h2 class="text-black ">言語を選んでください</h2>
          </div>
         
