--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,5 +1,6 @@
      <div class="container text-center">
       <div class="row justify-content-md-center">
+        
         <%= form_with model: Content.new, local: true do |f| %>
         <%= check_box :language, "Chinese" %>
         <%= f.label :language, "Chinese", class: "chinese" %>
@@ -22,7 +23,7 @@
       </div>
     </div>
         
-          <div class="cernter-block">
+          <div class="center-block">
             <div style="padding: 15px">
                 <div class="col-xs-5 text-center">
                     
@@ -62,3 +63,4 @@
                 </div>
             </div>
           </div>
+          
