--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -3,13 +3,13 @@
     <% @contents.each do |content| %>
       <div class="row">
         
-            <p class="content-text font-size:large titleindent">
-              <%= content.description %>
-            </p>
+            <div class="content-text font-size:large titleindent description-box">
+              <p><%= content.description %></P>
+            </div>
         
         <div class="content-index-single">
          <div class="Videolayout">
-          <%= video_tag content.video.url, size: "500x300", controls: true, muted: false %>
+          <%= video_tag content.video.url, size: "400x280", controls: true, muted: false %>
          </div>
             
         </div>
