--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,8 +13,8 @@
         <div class="col-md-3">
          
          <div class="text-center">
-           <%= link_to 'Chinese', '/chinese',class: 'btn' %>
-           <%= link_to 'Italian', '/italian',class: 'btn' %>
+           <%= link_to 'Chinese', media_path(language: 'chinese') ,class: 'btn' %>
+           <%= link_to 'Italian', media_path(language: 'italian') ,class: 'btn' %>
          <h2 class="text-black ">言語を選んでください</h2>
          </div>
         
