--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -10,7 +10,7 @@
         
        <div class="container text-center">  
         <%= f.check_box :media_keyword, {}, :film%>
-        <%= f.label :media_keyword, "映画", class: "film" %>
+        <%= f.label :media_keyword, "映画", class: "movie" %>
         <%= f.check_box :media_keyword, {}, :quote%>
         <%= f.label :media_keyword, "名言", class: "quote" %>
         <%= f.check_box :media_keyword, {}, :poetry%>
