--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -9,7 +9,8 @@
         
         <div class="content-index-single">
          <div class="Videolayout">
-          <%= video_tag content.video.url, size: "400x280", controls: true, muted: false %>
+          <%= video_tag content.video.url, size: "400x280", 
+          controls: true, muted: false %><br>
          </div>
             
         </div>
