--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="outline-box">
- <div class="top-hero-container font-default">
+ <div class="top-hero-container">
   
   <div class="bg-img">
    <div class="weaken-bg">
