--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -8,22 +8,20 @@
       
           <%= form_with(model: @content, local: true) do |form| %>
           <div class="form-group">
-            <%= form.label :video %>
             <%= form.file_field :video %>
-          </div>
-        
-   
-             
-                <%= form.radio_button :language, :chinese %>
-                <%= form.label :language, "中国語", {value: :chinese, style: "display: inline-block;"} %>
-                <%= form.radio_button :language, :italian %>
-                <%= form.label :language, "イタリア語", {value: :italian, style: "display: inline-block;"} %>
-        
-         
-              
-           
+          </div>  
+          
           <div class="form-group">
-            <%= form.label :description %>
+            <%= form.radio_button :language, :chinese %>
+            <%= form.label :language, "中国語",
+            {value: :chinese, style: "display: inline-block;"} %>
+            <%= form.radio_button :language, :italian %>
+            <%= form.label :language, "イタリア語",
+            {value: :italian, style: "display: inline-block;"} %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :description, "descriotion" %>
             <%= form.text_area :description, class: 'form-control' %>
           </div>
 
