--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,7 +26,7 @@ h1, h2 {
 
 
 .top-hero-container {
-  padding-top: 0px;
+  padding-top: 20px;
   h1 {
     font-size: 40px;
     margin-bottom: 80px;
@@ -65,6 +65,11 @@ animation : scrollSample01 10s linear infinite;
     animation: furueru .1s  infinite;
 }
 
+.buruburu5s {
+    display: inline-block;
+    animation: furueru .5s  infinite;
+}
+
 @keyframes furueru {
     0% {transform: translate(0px, 0px) rotateZ(0deg)}
     25% {transform: translate(2px, 2px) rotateZ(1deg)}
@@ -83,6 +88,15 @@ animation : scrollSample01 10s linear infinite;
   color          : #1E90FF; 
   font-size      : 20pt;
   font-weight    : 900;
+  letter-spacing : 1px; 
+  
+}
+
+.title_letter2 {
+  display        : inline-block;
+  color          : #1E90FF; 
+  font-size      : 20pt;
+  font-weight    : bold;
   letter-spacing : 1px; 
   
 }
@@ -132,7 +146,8 @@ animation : scrollSample01 10s linear infinite;
 }
 
 .Videolayout{
-  text-align: center;
+  text-align: left;
+  padding: 10px;
 }
 
 
@@ -167,4 +182,63 @@ animation : scrollSample01 10s linear infinite;
 .description-box p {
     margin: 0; 
     padding: 0;
+}
+
+.split{
+    display: table;
+    width: 50%;    
+}
+.split-item{
+    display: table-cell;
+    padding: 40px;
+    width: 30%;
+}
+.split-left{
+    position: relative;
+}
+.split-left__inner{
+    height: 100%;
+}
+
+.italian-bg-img {
+  background-image: url(dante.png);
+  background-repeat: no-repeat;
+  background-position: 30px 50px;
+  background-size: 20%;
+}
+
+.chinese-bg-img {
+  background-image: url(kyogeki.png);
+  background-repeat: no-repeat;
+  background-position: 30px 50px;
+  background-size: 20%;
+}
+
+div#content {
+background-color: #CCCCFF;
+width: 550px;
+overflow: hidden;
+}
+
+div#main {
+background-color: #FFF;
+height:200px;
+width: 200px;
+float: right;
+}
+
+nav {
+color: #6699FF;
+background-color: #FFF;
+height:200px;
+width: 200px;
+float: left;
+}
+
+nav a:hover {
+color: #4b6bfa;
+}
+
+nav li {
+line-height: 2em;
 }
