--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -4,8 +4,7 @@
         
     <div class="font-size:large">
       <p><%= content.description %></p>
-      <p><%= content.language %></p>
-      <p><%= content.category %></p>
+      <p>/<%= content.language %></p>
     </div>
 
      <div class="Videolayout">
