view/media/show,controller/media設定

--- a/app/views/media/admin_index.html.erb
+++ b/app/views/media/admin_index.html.erb
@@ -1,4 +1,10 @@
-<div></div>
+<div>ransack</div>
+
+  <!--< %= search_form_for @search, media_path do |f| %>-->
+  <!--  < %= form.text_field :name_cont %>-->
+  <!--  < %= form.submit '送信', class: "btn-white" %>-->
+  <!--< % end %>-->
+    
 ==========================
 <div class = "medium">
     <% @media.each do |medium| %>
