--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,10 +1,9 @@
 <div class="font-default" >
     <% @contents.each do |content| %>
-     
         
     <div class="font-size:large">
       <p><%= content.description %></p>
-      <p>/<%= content.language %></p>
+      <p><%= content.language %></p>
     </div>
 
      <div class="Videolayout">
@@ -12,6 +11,6 @@
       controls: true, muted: false %><br>
      </div>
    
-  <% end %>
+    <% end %>
  </div>
 
